--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-  <title>To Do</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="script.js"></script>
-</head>
-<body>
-  <h2>To Do</h2>
-  <form name="checkListForm">
-    <input type="text" name="checkListItem"/>
-  </form>
-  <div id="button">Add!</div>
-  <br/>
-  <div class="list"></div>
-</body>
+  <head>
+    <title>To-Do List</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+  </head>
+  <body>
+    <br>
+    <h1 id="header">To-Do List</h1>
+    <br>
+    <div id="add">
+      <form name="checkListForm">
+        <input type="text" name="checkListItem" placeholder="Write your to-do here.." autofocus="yes"/>
+      </form>
+    <div id="button">Add</div>
+    </div>
+    <br>
+    <div class="list">
+      <div id="remove-instruct">
+        <p>To remove a to-do just click on it!</p>
+      </div>
+    </div>
+    <div id="footer">
+      <div id="view-github">
+        <img src="http://i.imgur.com/TZ3OUwg.png" alt="GitHub"/>
+        <a href="https://github.com/IrshadAM/To-Do-List">View on GitHub</a>
+      </div>
+    </div>
+  </body>
 </html>
