--- a/old/index.html
+++ b/old/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>To Do</title>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </head>
