Added strikeout feature
Strikes out to-do when clicked once, removes to-do when double-clicked.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <br>
     <div class="list">
       <div id="remove-instruct">
-        <p>To remove a to-do just click on it!</p>
+        <p>To strike-out a to-do click on it!</p>
+        <p>To remove a to-do double click it!</p>
       </div>
     </div>
     <div id="footer">
