--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
-    <br>
-    <h1 id="header">To-Do List</h1>
+    <div id="header">
+      <h1>To-Do List</h1>
+    </div>
     <br>
     <div id="add">
       <form name="checkListForm">
