--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <title>To-Do List</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
-  </head>
-  <body>
-    <div id="header">
-      <h1>To-Do List</h1>
-    </div>
-    <br>
-    <div id="add">
-      <form name="checkListForm">
-        <input type="text" name="checkListItem" placeholder="Write your to-do here.." autofocus="yes"/>
-      </form>
+
+<head>
+  <title>To-Do List</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
+</head>
+
+<body>
+  <div id="header">
+    <h1>To-Do List</h1>
+
+  </div>
+  <br>
+  <div id="add">
+    <form name="checkListForm">
+      <input type="text" name="checkListItem" placeholder="Write your to-do here.." autofocus="yes" />
+    </form>
     <div id="button">Add</div>
+  </div>
+  <br>
+  <div class="list">
+    <div id="remove-instruct">
+      <p>To strike-out a to-do click on it!</p>
+      <p>To remove a to-do double click it!</p>
     </div>
-    <br>
-    <div class="list">
-      <div id="remove-instruct">
-        <p>To strike-out a to-do click on it!</p>
-        <p>To remove a to-do double click it!</p>
-      </div>
+  </div>
+  <div id="footer">
+    <div id="view-github">
+      <img src="http://i.imgur.com/TZ3OUwg.png" alt="GitHub" /> <a href="https://github.com/IrshadAM/To-Do-List">View on GitHub</a>
+
     </div>
-    <div id="footer">
-      <div id="view-github">
-        <img src="http://i.imgur.com/TZ3OUwg.png" alt="GitHub"/>
-        <a href="https://github.com/IrshadAM/To-Do-List">View on GitHub</a>
-      </div>
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
