--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <div id="footer">
     <div id="view-github">
-      <img src="http://i.imgur.com/TZ3OUwg.png" alt="GitHub" /> <a href="https://github.com/IrshadAM/To-Do-List">View on GitHub</a>
+      <img src="http://i.imgur.com/TZ3OUwg.png" alt="GitHub" ONERROR="this.src='GitHub-Mark-Light-32px.png'"/> <a href="https://github.com/IrshadAM/To-Do-List">View on GitHub</a>
 
     </div>
   </div>
